 - Qt: Add transformation matrix info to sprite view
 - Qt: Memory viewer now supports editing decimal values directly (closes mgba.io/i/1705)
 - Qt: Add copy button to GB printer dialog
 - Qt: Window title updates can be disabled (closes mgba.io/i/1912)
 - Qt: Redo OpenGL context thread handling (fixes mgba.io/i/1724)
 - Qt: Discard additional frame draws if waiting fails
 - SDL: Fall back to sw blit if OpenGL init fails
 - Util: Reset vector size on deinit
 - VFS: Change semantics of VFile.sync on mapped files (fixes mgba.io/i/1730)

0.8.4: (2020-10-29)
Emulation fixes:
 - GB Audio: Fix initial sweep state
 - GB Audio: Fix deserializing audio channels 2 and 3
 - GB Audio: Fix deserializing while audio was disabled (fixes mgba.io/i/1305)
 - GB Video: Fix drawing background when window is force-disabled by frontend
 - GB, GBA Video: Copy disable flags when drawing scanlines in proxy when not blocking
 - GBA Audio: Fix deserializing SOUNDCNT_L
 - GBA Audio: Fix stereo in XQ audio
 - GBA Audio: Fix volume/mute in XQ audio (fixes mgba.io/i/1864)
 - GBA Hardware: Fix GB Player detection on big endian platforms
 - GBA Video: Invalidate map cache when modifying BGCNT (fixes mgba.io/i/1846)
 - GBA Video: Don't draw sprites using unmapped VRAM in GL renderer (fixes mgba.io/i/1865)
 - GBA Video: Fix rare regression blending semitransparent sprites (fixes mgba.io/i/1876)
 - GBA Video: Do not affect OBJ pixel priority when writing OBJWIN (fixes mgba.io/i/1890)
 - GBA Video: Fix deferred blending when OBJWIN matches window (fixes mgba.io/i/1905)
 - GBA Video: Fix mode 4 transparency in OpenGL (fixes mgba.io/i/1907)
Other fixes:
 - 3DS: Redo video sync to be more precise
 - 3DS: Fix crash with libctru 2.0 when exiting
 - ARM Decoder: Fix decoding pre-indexed writeback instructions (fixes mgba.io/i/1915)
 - Core: Fix reported ROM size when a fixed buffer size is used
 - Core: Fix memory leak loading ELF files