@@ -113,6 +113,7 @@ Misc:
  - Qt: Window title updates can be disabled (closes mgba.io/i/1912)
  - Qt: Redo OpenGL context thread handling (fixes mgba.io/i/1724)
  - Qt: Discard additional frame draws if waiting fails
+ - Qt: Unify monospace font usage
  - SDL: Fall back to sw blit if OpenGL init fails
  - Util: Reset vector size on deinit
  - VFS: Change semantics of VFile.sync on mapped files (fixes mgba.io/i/1730)
